Fix image border radius on mobile

--- a/src/components/layouts/about/about.module.css
+++ b/src/components/layouts/about/about.module.css
@@ -10,8 +10,12 @@
         display: flex;
         align-items: flex-start;
 
-        div {
+        > div,
+        img {
             border-radius: 50%;
+        }
+
+        div {
             box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.5);
         }
     }
